--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "prettier": "^3.0.3",
     "sass": "^1.67.0",
     "sass-loader": "^13.3.2"
+  },
+  "dependencies": {
+    "@pinia/nuxt": "^0.4.11"
   }
 }
